# pybenchx

./: .gitignore  CHANGELOG.md  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml
docs/: astro.config.mjs  package-lock.json  package.json  starlight.config.ts  startlight.config.ts  tsconfig.json
docs/src/content/: config.ts
docs/src/content/docs/: api.mdx  behavior.mdx  cli.mdx  contributing.mdx  examples.mdx  getting-started.mdx  index.mdx  internals.mdx
pybench/: cli.py  core.py
tests/: test_core_unit.py
