[build-system]
requires = ["hatchling>=1.26.0", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pybenchx"
dynamic = ["version"]
description = "A tiny, precise microbenchmarking framework for Python"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "fullzer4", email = "gabrielpelizzaro@gmail.com" }]
keywords = ["benchmark", "microbenchmark", "performance", "timeit", "deno"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Testing",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/fullzer4/pybenchx"
Repository = "https://github.com/fullzer4/pybenchx"
Issues = "https://github.com/fullzer4/pybenchx/issues"

[project.scripts]
pybench = "pybench.cli:main"
pyb = "pybench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pybench"]

[tool.hatch.build.targets.sdist]
include = ["pybench", "README.md", "LICENSE", "examples"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
